--- a/MemoryMosaic/Pages/Maintenance/UntrackedFiles.razor
+++ b/MemoryMosaic/Pages/Maintenance/UntrackedFiles.razor
@@ -45,7 +45,7 @@
 }
 
 @code {
-    private readonly List<string> untrackedFiles = M.GetUntrackedLibFiles();
+    private readonly List<string> untrackedFiles = M.GetUntrackedFiles();
 
     ///Move a single item to mm_import.
     private void MoveBtnClick(int index)
