--- a/MemoryMosaic/Pages/LibraryContent/AllItems.razor
+++ b/MemoryMosaic/Pages/LibraryContent/AllItems.razor
@@ -1,27 +1,5 @@
 ﻿@page "/all-items"
 
 <title>All Items - MemoryMosaic</title>
-<link href="css/Pages/LibraryContentPage.css" rel="stylesheet"/>
 
-@* @{ *@
-@*     <header style="@lcv.Header.Style"> *@
-@*         <IconButton Icon="close" OnClick="@lcv.ClearChecks"/> *@
-@*         <span>@lcv.SelectedItemsCount&nbsp;&nbsp;Selected</span> *@
-@*         <div id="buttons"> *@
-@*             <IconButton Icon="file_download" OnClick="@lcv.DownloadSelected"/> *@
-@*             <IconButton Icon="collections" OnClick="@lcv.cs.Toggle"/> *@
-@*             <IconButton Icon="star_outline" OnClick="@lcv.StarPrompt.Toggle"/> *@
-@*             <IconButton Icon="trash" OnClick="@lcv.DeleteBtnClick"/> *@
-@*         </div> *@
-@*     </header> *@
-@* *@
-@*     const string Shared = "SELECT path, date_taken, date_added, starred, uuid, thumbnail, description FROM media WHERE date_deleted IS NULL"; *@
-@*     const string FirstQuery = $"{Shared} ORDER BY date_taken DESC LIMIT 100"; *@
-@*     const string TopQuery = $"{Shared} AND date_taken >= @oldestOrNewestDT ORDER BY date_taken ASC LIMIT 100"; *@
-@*     const string BottomQuery = $"{Shared} AND date_taken <= @oldestOrNewestDT ORDER BY date_taken DESC LIMIT 100"; *@
-@*     <LibraryContentViewer @ref="@lcv" FirstQuery="@FirstQuery" NotNullDTQueryTop="@TopQuery" NotNullDTQueryBottom="@BottomQuery" NoItemsText="All Your Items Appear Here" Rerender="@StateHasChanged"/> *@
-@* } *@
-@* *@
-@* @code { *@
-@*     private LibraryContentViewer lcv = new(); *@
-@* } *@
+<LibraryContentViewer NoItemsText="All Your Items Appear Here"/>
