--- a/MemoryMosaic/Pages/LibraryContent/Home.razor
+++ b/MemoryMosaic/Pages/LibraryContent/Home.razor
@@ -1,27 +1,5 @@
 @page "/"
 
-@* <title>Home - MemoryMosaic</title> *@
-@* <link href="css/Pages/LibraryContentPage.css" rel="stylesheet"/> *@
-@* *@
-@* @{ *@
-@*     <header style="@lcv.Header.Style"> *@
-@*         <IconButton Icon="close" OnClick="@lcv.ClearChecks"/> *@
-@*         <span>@lcv.SelectedItemsCount&nbsp;&nbsp;Selected</span> *@
-@*         <div id="buttons"> *@
-@*             <IconButton Icon="file_download" OnClick="@lcv.DownloadSelected" Title="Download Selected"/> *@
-@*             <IconButton Icon="collections" OnClick="@lcv.cs.Enable" Title="Toggle CollectionSelector"/> *@
-@*             <IconButton Icon="star_outline" OnClick="@lcv.StarPrompt.Enable" Title="Add or Remove Stars From Selected"/> *@
-@*             <IconButton Icon="trash" OnClick="@lcv.DeleteBtnClick" Title="Delete Selected"/> *@
-@*         </div> *@
-@*     </header> *@
-@* *@
-@*     const string Shared = "SELECT path, date_taken, date_added, starred, uuid, thumbnail, description FROM media WHERE separate = false AND date_deleted IS NULL AND date_taken"; *@
-@*     const string FirstQuery = $"{Shared} IS NOT NULL ORDER BY date_taken DESC LIMIT 100"; *@
-@*     const string TopQuery = $"{Shared} >= @oldestOrNewestDT ORDER BY date_taken ASC LIMIT 100"; *@
-@*     const string BottomQuery = $"{Shared} <= @oldestOrNewestDT ORDER BY date_taken DESC LIMIT 100"; *@
-@*     <LibraryContentViewer @ref="@lcv" FirstQuery="@FirstQuery" NotNullDTQueryTop="@TopQuery" NotNullDTQueryBottom="@BottomQuery" NoItemsText="Import some items to get started" Rerender="@StateHasChanged"/> *@
-@* } *@
-@* *@
-@* @code { *@
-@*     private LibraryContentViewer lcv = new(); *@
-@* } *@
+<title>Home - MemoryMosaic</title>
+
+<LibraryContentViewer NoItemsText="Import some items to get started" Where="date_taken IS NOT NULL"/>
