--- a/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
@@ -134,7 +134,7 @@ Items can be selected, and depending on the page, different options may be appli
 @code {
 	///Must resemble this order: path, date_taken, date_added, starred, uuid, thumbnail, description
 	[Parameter]
-	public required string Columns { get; set; } = "path, date_taken, date_added, starred, uuid, thumbnail, description";
+	public required string Columns { get; set; } = "path, date_taken, date_added, starred, uuid, thumbnail, description, date_deleted";
 
 	[Parameter]
 	public required string Table { get; set; } = "library";
