Add Reset() to LCV

--- a/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
@@ -122,6 +122,14 @@ Items can be selected, and depending on the page, different options may be appli
 <ProgressPopUp @ref="@downloadPopUp" Message="Preparing Zip..."/>
 
 @code {
+	///Call this when the sort order and/or order by have changed.
+	public void Reset()
+	{
+		Content.Clear();
+		topLoader = new ContentLoader(this, false, false, false);
+		bottomLoader = new ContentLoader(this, true, true, true);
+	}
+	
 	protected override async Task OnInitializedAsync()
 	{
 		GroupBy = DefaultGroupBy;
