Fix several problems with deleting/restoring items with FV due to bad if logic in LCV

--- a/MemoryMosaic/Shared/FullscreenViewer/FullscreenViewer.razor
+++ b/MemoryMosaic/Shared/FullscreenViewer/FullscreenViewer.razor
@@ -176,7 +176,7 @@
 		get => index;
 		set
 		{
-			if (value < 0 || value > Content.Count) return;
+			if (value < 0 || value >= Content.Count) return;
 			index = value;
 			collectionsContaining = C.GetCollectionsContaining(Current.Id);
 
