Add CtrlD and Delete hotkeys to LCV and FV

--- a/MemoryMosaic/Shared/FullscreenViewer/FullscreenViewer.razor
+++ b/MemoryMosaic/Shared/FullscreenViewer/FullscreenViewer.razor
@@ -137,7 +137,7 @@
 		<KeyboardShortcuts Left="@MoveLeft" Right="@MoveRight"/>
 	}
 
-	<KeyboardShortcuts AltLeft="@Disable" CtrlLeft="@MoveLeft" CtrlRight="@MoveRight" Esc="@Disable" I="@infoVisibility.Toggle"/>
+	<KeyboardShortcuts AltLeft="@Disable" CtrlD="@DeleteButtonClick" Del="@DeleteButtonClick" CtrlLeft="@MoveLeft" CtrlRight="@MoveRight" Esc="@Disable" I="@infoVisibility.Toggle"/>
 }
 
 @code {
