Fix issue where FV's next button was hidden on the last item, before more content loaded

--- a/MemoryMosaic/Shared/FullscreenViewer/FullscreenViewer.razor
+++ b/MemoryMosaic/Shared/FullscreenViewer/FullscreenViewer.razor
@@ -36,7 +36,7 @@
 			}
 		</div>
 
-		@if (Index < Content.Count - 1)
+		@if (Index < Content.Count)
 		{
 			<div class="sideButton" id="rightBtn" @onclick="@MoveRight"><IconButton Icon="arrow_forward_ios"/></div>
 		}
