Inline styles in Trash.scss

--- a/MemoryMosaic/Pages/LibraryContent/Trash.razor
+++ b/MemoryMosaic/Pages/LibraryContent/Trash.razor
@@ -1,9 +1,8 @@
 @page "/trash"
 
 <title>Trash - MemoryMosaic</title>
-<link href="css/Pages/Trash.css" rel="stylesheet"/>
 
-<IconTextButton ID="sortBtn" Icon="sort" Text="@sortBtnText" OnClick="@(() => { dropdown.Toggle(); StateHasChanged(); })"/>
+<IconTextButton Icon="sort" Text="@sortBtnText" OnClick="@(() => { dropdown.Toggle(); StateHasChanged(); })" Style="position: fixed; top: 6px; right: 400px; z-index: 9999"/>
 
 <Dropdown @ref="@dropdown" Positioning="top: 55px; right: 400px">
 	<DropdownButton Icon="check" Text="Newest Date Deleted First" OnClick="@(() => ChangeOrder(TrashSortMode.NewestDateDeleted))" IconStyle="@(sortMode == TrashSortMode.NewestDateDeleted ? "color: #1a73e8" : "visibility: hidden")" TextColor="@(sortMode == TrashSortMode.NewestDateDeleted ? "#1a73e8" : "white")"/>
