--- a/MemoryMosaic/Shared/Buttons/IconButton.razor
+++ b/MemoryMosaic/Shared/Buttons/IconButton.razor
@@ -1,6 +1,6 @@
 @* Button with just an icon and no text. *@
 @inherits Button
 
-<button id="@ID" class="iconBtn @Class" @onclick="@HandleClick" title="@Title">
+<button id="@ID" class="iconBtn @Class" style="@Style" @onclick="@HandleClick" title="@Title">
 	<MaterialIcon Icon="@Icon" IconStyle="@IconStyle"/>
 </button>
