--- a/MemoryMosaic/Pages/LibraryContent/Trash.razor
+++ b/MemoryMosaic/Pages/LibraryContent/Trash.razor
@@ -2,9 +2,7 @@
 
 <title>Trash - MemoryMosaic</title>
 
-<IconTextButton Icon="sort" Text="@sortBtnText" OnClick="@(() => { dropdown.Toggle(); StateHasChanged(); })" Style="position: fixed; top: 6px; right: 400px; z-index: 9999"/>
-
-<Dropdown @ref="@dropdown" Positioning="top: 55px; right: 400px">
+<Dropdown @ref="@dropdown" Positioning="top: 55px; right: 25px">
 	<DropdownButton Icon="check" Text="Newest Date Deleted First" OnClick="@(() => ChangeOrder(TrashSortMode.NewestDateDeleted))" IconStyle="@(sortMode == TrashSortMode.NewestDateDeleted ? "color: #1a73e8" : "visibility: hidden")" TextColor="@(sortMode == TrashSortMode.NewestDateDeleted ? "#1a73e8" : "white")"/>
 	<DropdownButton Icon="check" Text="Newest Date Taken First" OnClick="@(() => ChangeOrder(TrashSortMode.NewestDateTaken))" IconStyle="@(sortMode == TrashSortMode.NewestDateTaken ? "color: #1a73e8" : "visibility: hidden")" TextColor="@(sortMode == TrashSortMode.NewestDateTaken ? "#1a73e8" : "white")"/>
 	<DropdownButton Icon="check" Text="Newest Date Added First" OnClick="@(() => ChangeOrder(TrashSortMode.NewestDateAdded))" IconStyle="@(sortMode == TrashSortMode.NewestDateAdded ? "color: #1a73e8" : "visibility: hidden")" TextColor="@(sortMode == TrashSortMode.NewestDateAdded ? "#1a73e8" : "white")"/>
@@ -13,7 +11,11 @@
 	<DropdownButton Icon="check" Text="Oldest Date Added First" OnClick="@(() => ChangeOrder(TrashSortMode.OldestDateAdded))" IconStyle="@(sortMode == TrashSortMode.OldestDateAdded ? "color: #1a73e8" : "visibility: hidden")" TextColor="@(sortMode == TrashSortMode.OldestDateAdded ? "#1a73e8" : "white")"/>
 </Dropdown>
 
-<LibraryContentViewer @ref="@lcv" NoItemsText="No Items in Trash" OrderByFields="@orderBy" SortDesc="@sortDesc" TrashPage="@true"/>
+<LibraryContentViewer @ref="@lcv" NoItemsText="No Items in Trash" OrderByFields="@orderBy" SortDesc="@sortDesc" TrashPage="@true">
+	<AdditionalButtons>
+		<IconTextButton Icon="sort" Text="@sortBtnText" OnClick="@(() => { dropdown.Toggle(); StateHasChanged(); })" Style="margin-left: 8px; margin-right: -30px"/>
+	</AdditionalButtons>
+</LibraryContentViewer>
 
 @code {
 	private LibraryContentViewer lcv = null!;
